# practice_projects

./: .gitignore  LICENSE  README.md
00_bin2dec/: README.md  main.go
01_adventofcode/: 2015_01.go  2015_02.go  2015_03.go  2015_04.go  2015_05.go  2015_05_test.go  2015_06.py  2015_06_test.py  2015_07.py
02_algorithmcram/: bfs_dfs.py  clone_graph.py  cram.py  cycle_detection.py  dp_maxsubarray.py  generate_parenthesis.py  heap.py  heap_origin_distance.py  junk.py  merge_intervals.py  reverse_linked_list.py
02_algorithmcram/go/: gohr_bonappetit.go
openai_mantis_demo/openai-demo/: pyproject.toml
openai_mantis_demo/openai-demo/openai_demo/: chicago.tsv  chicago_short.tsv  main.py
openai_mantis_demo/openai-demo/tests/: test_openai_demo.py
