[tool.poetry]
name = "openai-demo"
version = "0.1.0"
description = ""
authors = ["Russell Tran <tranrl@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.5.0"
simple-term-menu = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
